config/samples/httpbin_ingress_letsencrypt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
  annotations:
    #    cert-manager.io/issuer: selfsigned-issuer
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: "ingress.tyk.io"
  tls:
    - secretName: tyk-technology-tls
      hosts:
        - httpbin.asoorm.do.poc.tyk.technology
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dummy
